# piigex

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  cli.md  coverage.md  extending.md  index.md
examples/: chatbot_filter.py  csv_scrubber.py  json_scrubber.py  log_scrubber.py
scripts/: gen_coverage.py
src/piigex/: __init__.py  __main__.py  cli.py  core.py  tokens.py  types.py
src/piigex/detectors/: __init__.py  base.py
src/piigex/detectors/at/: vnr.py
src/piigex/detectors/be/: bis.py  eid.py  nn.py  ogm_vcs.py  phone.py  vat.py
src/piigex/detectors/bg/: egn.py  pnf.py
src/piigex/detectors/cz/: dic.py  rc.py
src/piigex/detectors/de/: idnr.py  phone.py  svnr.py  vat.py
src/piigex/detectors/dk/: cpr.py  cvr.py
src/piigex/detectors/ee/: ik.py
src/piigex/detectors/es/: ccc.py  cif.py  dni.py  matricula.py  nie.py  nss.py  passport.py  phone.py  referencia_catastral.py
src/piigex/detectors/fi/: hetu.py  ytunnus.py
src/piigex/detectors/fr/: cni.py  nif.py  nir.py  phone.py  siren.py  siret.py  tva.py
src/piigex/detectors/gb/: nhs.py  nino.py  utr.py  vat.py
src/piigex/detectors/gr/: amka.py
src/piigex/detectors/hr/: oib.py
tests/: test_at.py  test_be.py  test_be_phone.py  test_bg.py  test_cli.py  test_conflict_resolution.py  test_coverage_lift.py  test_cz.py  test_de.py  test_de_phone.py  test_default_scrubber_integration.py  test_dk.py  test_ee.py  test_es.py  test_es_phone.py  test_eu_vat.py  test_fi.py  test_fr.py  test_fr_phone.py  test_gb.py  test_gr.py  test_hr.py  test_hu.py  test_iban.py  test_ie.py  test_intl.py  test_it.py  test_it_phone.py  test_json.py  test_lt.py  test_nl.py  test_nl_phone.py  test_opt_in_detectors.py  test_phone_e164.py  test_pl.py  test_pt.py  test_pt_phone.py  test_ro.py  test_se.py  test_si.py  (+3 more)
(+45 files in other folders)
