[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piigex"
version = "0.2.0"
description = "Lightweight PII detection and redaction for structured identifiers using regex and checksum validation"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "David Ramírez", email = "davidsrn@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["python-stdnum>=1.20"]
keywords = ["pii", "privacy", "redaction", "gdpr", "regex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Topic :: Security",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/davidsrn/piigex"
Repository = "https://github.com/davidsrn/piigex"
Issues = "https://github.com/davidsrn/piigex/issues"
Changelog = "https://github.com/davidsrn/piigex/blob/main/CHANGELOG.md"

[project.scripts]
piigex = "piigex.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/piigex"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=piigex --cov-report=term-missing"

[tool.coverage.run]
source = ["src/piigex"]
branch = true

[tool.coverage.report]
fail_under = 90
